--- a/contact-us.html
+++ b/contact-us.html
@@ -17,7 +17,7 @@
         <section class="nav-content">
             <div class="hidden-mobile">
                 <a href="latest-news.html" class="nav-menu-link">Latest News</a>
-                <a href="#" class="nav-menu-link">Gaming Tech</a>
+                <a href="gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
             </div>
         
             <div id="logo-container">
@@ -38,10 +38,10 @@
 
     <div id="popout-nav-menu" class="active">
         <a href="/latest-news.html" class="nav-menu-link">Latest News</a>
-        <a href="#" class="nav-menu-link">Gaming Tech</a>
+        <a href="gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
     </div>
 
-    <main>
+    <main id="main-content">
         <section id="contact-us">
             <header>
                 <h2>Contact Us!</h2>
@@ -76,15 +76,22 @@
         </section>
     </main>
 
-    <!-- TODO: Fix responsive layout when < 768 -->
     <footer>
-        <section>
-            <a class="order-1" href="contact-us.html">Contact Us</a>
-            <a class="order-3" href="about-us.html">About Us</a>
-            <image src="assets/images/large_gaming.ly.png" class="order-2" alt="Footer Logo"></image>
+        <section class="hidden-mobile">
+            <a href="contact-us.html">Contact Us</a>
+            <image src="assets/images/large_gaming.ly.png" alt="Footer Logo"></image>
+            <a href="about-us.html">About Us</a>
         </section>
 
-        <section>
+        <section class="flex-3 hidden-tablet hidden-desktop">
+            <image src="assets/images/small_gaming.ly.png" alt="Footer Logo"></image>
+            <div class="flex-column">
+                <a class"footer-nav-link" href="contact-us.html">Contact Us</a>
+                <a class"footer-nav-link" href="about-us.html">About Us</a>
+            </div>
+        </section>
+
+        <section class="flex-1">
             <span>Copyright &copy;</span>
         </section>
     </footer>
