Dark mode. Improve responsiveness.

--- a/report.html
+++ b/report.html
@@ -11,7 +11,8 @@ I looked at The Verge, IGN and similar gaming and technology oriented websites. 
 <h4>Site Accessibility</h4>
 My site is accessible by allowing users to navigate around using the keyboard, notably using tab to iterate through website controls, or by using the arrows and enter keys to select an article to read.
 
-Furthermore, dark mode is available for users who may be sensitive to the brightness. Colours are chosen carefully in this case to prevent eye strain.
+Furthermore, dark mode support was added, changing the colours of the background, text and shadows, to prevent
+eye strain and remain aesthetically pleasing.
 
 <h4>Useability</h4>
 Useability is considered here in terms of clarity in the website. It's very clear where buttons are located, what they represent and do, where navigation links are, what page you're currently on by noticeably changing colours and responsiveness ensures the layout remains optimal for the user's viewport.
