--- a/latest-news.html
+++ b/latest-news.html
@@ -34,6 +34,8 @@
                 </div>
             </div>
         </section>
+        <section>
+        </section>
     </nav>
 
     <div id="popout-nav-menu" class="active">
