--- a/gaming-tech.html
+++ b/gaming-tech.html
@@ -22,7 +22,8 @@
         
             <div id="logo-container">
                 <a href="latest-news.html">
-                    <image src="assets/images/large_gaming.ly.png" alt="Website Logo"></image>
+                    <image class="hidden-mobile-xs" src="assets/images/large_gaming.ly.png" alt="Website Logo"></image>
+                    <image class="visible-mobile-xs" src="assets/images/small_gaming.ly.png" alt="Website Logo"></image>
                 </a>
             </div>
     
