--- a/latest-news.html
+++ b/latest-news.html
@@ -22,7 +22,8 @@
         
             <div id="logo-container">
                 <a href="latest-news.html">
-                    <image src="assets/images/large_gaming.ly.png" alt="Website Logo"></image>
+                    <image class="hidden-mobile-xs" src="assets/images/large_gaming.ly.png" alt="Website Logo"></image>
+                    <image class="visible-mobile-xs" src="assets/images/small_gaming.ly.png" alt="Website Logo"></image>
                 </a>
             </div>
     
@@ -46,7 +47,6 @@
     <main id="main-content">
     </main>
 
-    <!-- TODO: Fix responsive layout when < 768 -->
     <footer>
         <section class="hidden-mobile">
             <a href="contact-us.html">Contact Us</a>
