--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/inputs.css">
-    <link rel="stylesheet" href="css/gaming-tech.css">
+    <link rel="stylesheet" href="css/about-us.css">
 
     <title>Latest News</title>
 </head>
@@ -17,7 +17,7 @@
         <section class="nav-content">
             <div class="hidden-mobile">
                 <a href="latest-news.html" class="nav-menu-link">Latest News</a>
-                <a href="#" class="nav-menu-link">Gaming Tech</a>
+                <a href="gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
             </div>
         
             <div id="logo-container">
@@ -39,25 +39,37 @@
 
     <div id="popout-nav-menu" class="active">
         <a href="/latest-news.html" class="nav-menu-link">Latest News</a>
-        <a href="#" class="nav-menu-link">Gaming Tech</a>
+        <a href="/gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
     </div>
 
     <main>
-        
+        <section>
+            <header>
+                <h2>About Us</h2>
+            </header>
+
+            <p>
+                GAMING.LY is a collective of like-minded gamers with a passion for sharing quality news and content related to gaming.
+            </p>
+            <p>
+                With over a few weeks of experience in the industry, we do our best to ensure our visitors feel welcome and right at home, whilst leaving with more knowledge they could ever know what to do with.
+            </p>
+            <image src="assets/images/group-photo.jpg" alt="Group photo!"></image>
+        </section>
     </main>
 
     <footer>
         <section class="hidden-mobile">
-            <a href="contact-us.html">Contact Us</a>
+            <a class="footer-nav-link" href="contact-us.html">Contact Us</a>
             <image src="assets/images/large_gaming.ly.png" alt="Footer Logo"></image>
-            <a href="about-us.html">About Us</a>
+            <a class="footer-nav-link active" href="about-us.html">About Us</a>
         </section>
 
         <section class="flex-3 hidden-tablet hidden-desktop">
             <image src="assets/images/small_gaming.ly.png" alt="Footer Logo"></image>
             <div class="flex-column">
                 <a class"footer-nav-link" href="contact-us.html">Contact Us</a>
-                <a class"footer-nav-link" href="about-us.html">About Us</a>
+                <a class"footer-nav-link active" href="about-us.html">About Us</a>
             </div>
         </section>
 
