--- a/contact-us.html
+++ b/contact-us.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/inputs.css">
+    <link rel="stylesheet" href="css/contact-us.css">
 
     <title>Latest News</title>
 </head>
@@ -38,7 +39,7 @@
 
     <div id="popout-nav-menu" class="active">
         <a href="/latest-news.html" class="nav-menu-link">Latest News</a>
-        <a href="gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
+        <a href="/gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
     </div>
 
     <main id="main-content">
@@ -48,7 +49,8 @@
             </header>
 
             <p>
-                We'd love to hear from you! If you have any suggestions for the content we create and share, please give us a shout with the form below.
+                We'd love to hear from you!<br />
+                If you have any suggestions for the content we create and share, please give us a shout with the form below.
             </p>
 
             <form id="contact-us-form" class="horizontal-form">
@@ -73,20 +75,22 @@
             <p>
                 We appreciate any feedback/messages. Thanks for contacting us and have a great day!
             </p>
+
+            <image alt="Thumbs up!" src="assets/images/thumbs-up.png"></image>
         </section>
     </main>
 
     <footer>
         <section class="hidden-mobile">
-            <a href="contact-us.html">Contact Us</a>
+            <a href="contact-us.html" class="footer-nav-link active">Contact Us</a>
             <image src="assets/images/large_gaming.ly.png" alt="Footer Logo"></image>
-            <a href="about-us.html">About Us</a>
+            <a href="about-us.html" class="footer-nav-link">About Us</a>
         </section>
 
         <section class="flex-3 hidden-tablet hidden-desktop">
             <image src="assets/images/small_gaming.ly.png" alt="Footer Logo"></image>
             <div class="flex-column">
-                <a class"footer-nav-link" href="contact-us.html">Contact Us</a>
+                <a class"footer-nav-link active" href="contact-us.html">Contact Us</a>
                 <a class"footer-nav-link" href="about-us.html">About Us</a>
             </div>
         </section>
