--- a/gaming-tech.html
+++ b/gaming-tech.html
@@ -39,7 +39,7 @@
 
     <div id="popout-nav-menu" class="active">
         <a href="/latest-news.html" class="nav-menu-link">Latest News</a>
-        <a href="#" class="nav-menu-link active">Gaming Tech</a>
+        <a href="" class="nav-menu-link active">Gaming Tech</a>
     </div>
 
     <main id="main-content">
