Updated page name

--- a/article.html
+++ b/article.html
@@ -16,12 +16,12 @@
     <nav>
         <section class="nav-content">
             <div class="hidden-mobile">
-                <a href="latest-news.html" class="nav-menu-link">Latest News</a>
+                <a href="index.html" class="nav-menu-link">Latest News</a>
                 <a href="gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
             </div>
         
             <div id="logo-container">
-                <a href="latest-news.html">
+                <a href="index.html">
                     <image class="hidden-mobile-xs" src="assets/images/large_gaming.ly.png" alt="Website Logo"></image>
                     <image class="visible-mobile-xs" src="assets/images/small_gaming.ly.png" alt="Website Logo"></image>
                 </a>
@@ -38,7 +38,7 @@
     </nav>
 
     <div id="popout-nav-menu" class="active">
-        <a href="latest-news.html" class="nav-menu-link">Latest News</a>
+        <a href="index.html" class="nav-menu-link">Latest News</a>
         <a href="gaming-tech.html" class="nav-menu-link">Gaming Tech</a>
     </div>
 
