--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         
             <div id="logo-container">
-                <a href="latest-news.html">
+                <a href="index.html">
                     <image class="hidden-mobile-xs" src="assets/images/large_gaming.ly.png" alt="Website Logo"></image>
                     <image class="visible-mobile-xs" src="assets/images/small_gaming.ly.png" alt="Website Logo"></image>
                 </a>
