Added references in appendices

--- a/report.html
+++ b/report.html
@@ -33,4 +33,26 @@ Aside from the look and feel, the javascript could be better organized and made 
 No libraries/plugins were used to create the website, it was all done from scratch and driven by inspiration from other websites mentioned above.
 
 <h4>Appendices</h4>
+[1] Psychology of colours, learning what colours to choose
+https://www.verywellmind.com/color-psychology-2795824#:~:text=These%20warm%20colors%20evoke%20emotions,feelings%20of%20sadness%20or%20indifference.
 
+[2] Paletton, colour picking
+https://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF
+
+[3] Color Mind, colour generation
+http://colormind.io/
+
+[4] Adapted sticky footer from css-tricks:
+https://css-tricks.com/couple-takes-sticky-footer/
+
+[5] General tips and guides to flexbox
+https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+
+[6] CSS Burger menu button, changed the animation
+https://www.w3schools.com/howto/howto_css_menu_icon.asp
+
+[7] MDN for general Javascript/HTML documentation
+https://developer.mozilla.org/en-US/
+
+[8] StackOverflow for tips
+https://stackoverflow.com/
